<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top"
        android:text="@string/titulo"
        android:textSize="22sp"
        android:textStyle="bold"
        />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/left"
            />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/between"
    >
    <TextView
        android:id="@+id/tvDateTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_titulo"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/left"
        />

    <TextView
        android:id="@+id/tvfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_nac"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/leftshort"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/between">

        <TextView
            android:id="@+id/tvTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            />
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/leftshort"
            />
    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/between"
    >

    <TextView
        android:id="@+id/tvEm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_name"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/left"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/leftshort"
        />

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/between"
        >

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/descripcion_name"
            android:layout_marginLeft="@dimen/left"
            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="16"
            android:hint="@string/descripcion"
            android:layout_marginLeft="@dimen/leftshort"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="117dp"
            android:layout_marginEnd="114dp"
            android:layout_marginRight="114dp"
            android:layout_marginBottom="184dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/editar"
            android:textAlignment="center" />
    </RelativeLayout>

</LinearLayout>