<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

        <EditText
            android:id="@+id/eTNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="16"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="29dp"
            />

        <TextView
            android:id="@+id/tvDateTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_titulo"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/btDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_nac"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/eTNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="16"
            android:hint="@string/numero"
            android:inputType="phone"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="29dp"
            />

        <EditText
            android:id="@+id/eTMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="16"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="29dp"
            />

        <EditText
            android:id="@+id/eTDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="16"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="60dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/siguiente"
            android:textAlignment="center"
            android:layout_marginBottom="0dp"
            android:gravity="bottom|end" />
        </RelativeLayout>

</LinearLayout>
